@@ -93,9 +93,9 @@
 #define ENOTSUP	-1030507
 
 /*
- * Not all mingw32 versions have this struct.
+ * cygwin does not have this struct.
  */
-#if !defined(__BORLANDC__) && !defined(_MSC_VER) && !defined(_WIN64) && defined(HAVE_NO_STRUCT_STAT32I64)
+#ifdef __CYGWIN__
   struct _stat32i64 {
     dev_t st_dev;
     ino_t st_ino;
@@ -105,15 +105,9 @@
     short st_gid;
     dev_t st_rdev;
     __int64 st_size;
-#ifdef __CYGWIN__
     struct {long tv_sec;} st_atim;
     struct {long tv_sec;} st_mtim;
     struct {long tv_sec;} st_ctim;
-#else
-    long st_atime;
-    long st_mtime;
-    long st_ctime;
-#endif
   };
 #endif
 
